Website page push 17022026

--- a/index.html
+++ b/index.html
@@ -217,7 +217,23 @@
                 <div class="section-label">Community Impact</div>
                 <h2>Awards & Volunteering</h2>
             </div>
+            
             <div class="experience-grid">
+                <div class="experience-card reveal">
+                    <div class="experience-header">
+                        <div>
+                            <div class="experience-title">Distinguished Alumni Award</div>
+                            <div class="experience-company">
+                                Rajagiri School of Engineering and Technology (RSET)
+                            </div>
+                        </div>
+                        <div class="experience-date">2018 - 2022</div>
+                    </div>
+                    <ul class="experience-points">
+                        <li>Recognized as a Distinguished Alumni for outstanding professional achievements, leadership, and contributions to the field of computer science</li>
+                        <li>Awarded for continued engagement with the institution and impact beyond graduation</li>
+                    </ul>
+                </div>
                 <div class="experience-card reveal">
                     <div class="experience-header">
                         <div>
@@ -259,7 +275,7 @@
                             <div class="experience-title">Mentor & Technical Speaker</div>
                             <div class="experience-company">IEEE Kerala Section - Outreach Resources in Engineering</div>
                         </div>
-                        <div class="experience-date">2019 - 2022</div>
+                        <div class="experience-date">2019 - Present</div>
                     </div>
                     <ul class="experience-points">
                         <li>Served as mentor for Outreach Resources in Engineering program under IEEE Kerala Section</li>
