--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             </div>
             <div class="about-content">
                 <div class="about-text reveal">
-                    <p>Analytical and results-driven data science graduate student with a strong foundation in data analysis, statistical modelling, and machine learning. Proficient in Python, SQL, and data visualisation, with a passion for transforming complex datasets into actionable business insights.</p>
-                    <p>Previously worked at Informatica Inc., delivering enterprise data solutions for global clients across banking, insurance, and pharmaceutical sectors. Experienced in data workflows, quality management, governance, and client-facing technical engagement.</p>
-                    <p>Beyond technical expertise, I have extensive leadership experience as former Chairperson of IEEE at Rajagiri School of Engineering and Technology, where I organised over 50 innovative events and received recognition as Best Volunteer of IEEE Computer Society Kerala Section.</p>
+                    <p>Analytical and results-driven data science graduate student with a strong foundation in data analysis, statistical modelling, and machine learning. Proficient in Python, R, SQL, and data visualisation, with a passion for transforming complex datasets into actionable business insights.</p>
+                    <p>Worked at Informatica Inc., delivering enterprise data solutions for global clients across banking, insurance, and pharmaceutical sectors. Experienced in data workflows, quality management, governance, and client-facing technical engagement, with a proven ability to communicate effectively and meet timelines while coordinating with international stakeholders.</p>
+                    <p>Beyond technical expertise, I gained extensive leadership experience during my bachelor’s studies as Chairperson of the IEEE Computer Society Chapter, where I organized over 60 innovative events and was recognized as Best Volunteer of the IEEE Computer Society Kerala Section.</p>
                 </div>
                 <div class="stats reveal">
                     <div class="stat-card">
@@ -92,7 +92,7 @@
                     </div>
                     <ul class="experience-points">
                         <li>Designed, developed, and monitored ETL data workflows to ensure data quality, integrity, and master data management across enterprise systems</li>
-                        <li>Ensured communication with customers to gather technical requirements and deliver tailored data solutions aligned with business objectives</li>
+                        <li>Ensured timely communication with customers to gather technical requirements and deliver tailored data solutions aligned with business objectives</li>
                         <li>Worked with global clients from banking, insurance, and pharmaceutical sectors, ensuring compliance and data governance standards</li>
                         <li>Implemented data quality frameworks that improved data reliability and operational efficiency</li>
                         <li>Supervised and trained new joiners on data engineering processes, tools, and organizational standards, ensuring effective integration into project teams</li>
