--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="about-text reveal">
                     <p>Analytical and results-driven data science graduate student with a strong foundation in data analysis, statistical modelling, and machine learning. Proficient in Python, R, SQL, and data visualisation, with a passion for transforming complex datasets into actionable business insights.</p>
                     <p>Worked at Informatica Inc., delivering enterprise data solutions for global clients across banking, insurance, and pharmaceutical sectors. Experienced in data workflows, quality management, governance, and client-facing technical engagement, with a proven ability to communicate effectively and meet timelines while coordinating with international stakeholders.</p>
-                    <p>Beyond technical expertise, I gained extensive leadership experience during my bachelor’s studies as Chairperson of the IEEE Computer Society Chapter, where I organized over 60 innovative events and was recognized as Best Volunteer of the IEEE Computer Society Kerala Section.</p>
+                    <p>Beyond technical expertise, I gained extensive leadership experience during my bachelor’s studies as Chairperson of the IEEE Computer Society Chapter, where I organized over 60 innovative events and was recognized on state level as Best Volunteer of the IEEE Computer Society.</p>
                 </div>
                 <div class="stats reveal">
                     <div class="stat-card">
