--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="hero-content">
                 <div class="hero-label">Data Science Graduate Student</div>
                 <h1>Vinay Mathew<br>Varghese</h1>
-                <p class="hero-subtitle">Transforming complex data into actionable insights through machine learning, statistical modelling, and data-driven decision-making. <br> Currently pursuing a Master of Data Science at The University of Adelaide.</p>
+                <p class="hero-subtitle">Transforming complex data into actionable insights through machine learning, statistical modelling, and data-driven decision-making. <br> Currently pursuing Master's degree in Data Science at Adelaide University, Australia.</p>
                 <div class="cta-buttons">
                     <a href="#contact" class="btn btn-primary">Get In Touch</a>
                     <a href="#experience" class="btn btn-secondary">View Experience</a>
@@ -150,6 +150,9 @@
                         <span class="skill-tag">R</span>
                         <span class="skill-tag">Julia</span>
                         <span class="skill-tag">SQL</span>
+                        <span class="skill-tag">C</span>
+                        <span class="skill-tag">C++</span>
+                        <span class="skill-tag">Java</span>
                         <span class="skill-tag">Data Structures</span>
                         <span class="skill-tag">Algorithms</span>
                     </div>
