--- a/index.html
+++ b/index.html
@@ -195,9 +195,11 @@
                     <h3>Professional Skills</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">Problem Solving</span>
+                        <span class="skill-tag">Team Building</span>
                         <span class="skill-tag">Critical Thinking</span>
                         <span class="skill-tag">Time Management</span>
-                        <span class="skill-tag">Client Communication</span>
+                        <span class="skill-tag">Communication</span>
+                        <span class="skill-tag">Adaptability</span>
                     </div>
                 </div>
 
@@ -205,6 +207,7 @@
                     <h3>Leadership & Communication</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">Team Leadership</span>
+                        <span class="skill-tag">Team Management</span>
                         <span class="skill-tag">Public Speaking</span>
                         <span class="skill-tag">Mentoring</span>
                         <span class="skill-tag">Event Management</span>
@@ -228,7 +231,7 @@
                         <div>
                             <div class="experience-title">Distinguished Alumni Award</div>
                             <div class="experience-company">
-                                Rajagiri School of Engineering and Technology (RSET)
+                                Rajagiri School of Engineering and Technology (RSET), Kerala, India.
                             </div>
                         </div>
                         <!-- <div class="experience-date">2018 - 2022</div> -->
