--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#education">Education</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#awards">Awards</a></li>
@@ -97,6 +98,41 @@
                         <li>Implemented data quality frameworks that improved data reliability and operational efficiency</li>
                         <li>Supervised and trained new joiners on data engineering processes, tools, and organizational standards, ensuring effective integration into project teams</li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <div class="container">
+            <div class="section-header reveal">
+                <div class="section-label">Projects I've built</div>
+                <h2>Projects</h2>
+            </div>
+            <div class="project-featured reveal">
+                <div class="project-top">
+                    <div>
+                        <div class="project-title">CalmDown</div>
+                        <div class="project-subtitle">Stress Reduction Recommendation System</div>
+                    </div>
+                    <a href="https://github.com/VinayMV/Stress-Reduction-Recommendation-System" target="_blank" class="btn btn-secondary">View on GitHub →</a>
+                </div>
+                <p class="project-description">A questionnaire-based web application that analyses user stress levels through structured questions and delivers personalised stress reduction recommendations based on their stress level and specific stress conditions.</p>
+                <div class="project-finding">
+                    <span class="finding-label">📊 Key Finding</span>
+                    <p>Data analysis revealed the 18–30 age group experiences the highest stress frequency, particularly at medium and high PSS levels — directly informing the recommendation engine's prioritisation logic.</p>
+                </div>
+                <div class="project-stack">
+                    <span class="stack-label">Tech Stack</span>
+                    <div class="stack-tags">
+                        <span class="stack-tag backend">Python</span>
+                        <span class="stack-tag backend">Machine Learning</span>
+                        <span class="stack-tag backend">GNN</span>
+                        <span class="stack-tag backend">Flask</span>
+                        <span class="stack-tag frontend">HTML</span>
+                        <span class="stack-tag frontend">CSS</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -185,9 +221,10 @@
                     <h3>Tools & Platforms</h3>
                     <div class="skill-tags">
                         <span class="skill-tag">Microsoft Office</span>
-                        <span class="skill-tag">Azure ML</span>
+                        <span class="skill-tag">PyTorch</span>
+                        <span class="skill-tag">Ollama</span>
+                        <span class="skill-tag">Pandas</span>
                         <span class="skill-tag">GitHub</span>
-                        <span class="skill-tag">Version Control</span>
                     </div>
                 </div>
 
@@ -211,6 +248,7 @@
                         <span class="skill-tag">Public Speaking</span>
                         <span class="skill-tag">Mentoring</span>
                         <span class="skill-tag">Event Management</span>
+                        <span class="skill-tag">Presentation</span>
                     </div>
                 </div>
             </div>
@@ -238,7 +276,7 @@
                     </div>
                     <ul class="experience-points">
                         <li>Recognized as a Distinguished Alumni for outstanding professional achievements, leadership, and contributions to the field of computer science</li>
-                        <li>Awarded for continued engagement with the institution and impact beyond graduation</li>
+                        <li>Awarded for continued engagement with the college and impact beyond graduation</li>
                     </ul>
                 </div>
                 <div class="experience-card reveal">
@@ -355,13 +393,27 @@
                         </svg>
                         LinkedIn
                     </a>
-                    <a href="https://github.com/VinayMV" target="_blank" class="contact-link">
+                    <a href="https://github.com/VinayMC" target="_blank" class="contact-link">
                         <svg fill="currentColor" viewBox="0 0 24 24">
                             <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                         </svg>
                         GitHub
                     </a>
                 </div>
+
+                <!-- Contact Form -->
+                <form class="contact-form reveal" action="https://formspree.io/f/xkovbpgq" method="POST">
+                    <div class="form-group">
+                        <input type="text" name="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" name="email" placeholder="Your Email" required>
+                    </div>
+                    <div class="form-group">
+                        <textarea name="message" placeholder="Your Message (max 80 words)" rows="5" required oninput="limitWords(this, 80)"></textarea><small class="word-count">0 / 80 words</small>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Send Message</button>
+                </form>
             </div>
         </div>
     </section>
